[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets-originals/fonts/OpenDyslexic-Bold.otf" type="DynamicFontData" id=1]
[ext_resource path="res://assets-originals/png/title_background.png" type="Texture" id=2]
[ext_resource path="res://Test Scenes/Scenes/Credits.gd" type="Script" id=3]
[ext_resource path="res://new_theme.tres" type="Theme" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[node name="Credits" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 210.0
margin_right = 814.0
margin_bottom = 600.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 183.0
margin_right = 604.0
margin_bottom = 239.0
custom_fonts/font = SubResource( 1 )
text = "Made by:"
align = 1

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 243.0
margin_right = 604.0
margin_bottom = 377.0
custom_constants/hseparation = 20
columns = 4

[node name="Container" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/GridContainer"]
margin_right = 143.0
margin_bottom = 134.0
alignment = 1

[node name="DiogohexTwitter" type="LinkButton" parent="HBoxContainer/VBoxContainer/GridContainer/Container"]
margin_right = 143.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 2 )
text = "@diogohex"
underline = 1

[node name="Role" type="Label" parent="HBoxContainer/VBoxContainer/GridContainer/Container"]
margin_top = 46.0
margin_right = 143.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 2 )
text = "Dev"

[node name="DiogohexGithub" type="LinkButton" parent="HBoxContainer/VBoxContainer/GridContainer/Container"]
margin_top = 92.0
margin_right = 143.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 2 )
text = "Github"
underline = 1

[node name="Container2" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/GridContainer"]
margin_left = 163.0
margin_right = 284.0
margin_bottom = 134.0
alignment = 1

[node name="InachoTwitter" type="LinkButton" parent="HBoxContainer/VBoxContainer/GridContainer/Container2"]
margin_right = 121.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 2 )
text = "@inacho_"
underline = 1

[node name="Role" type="Label" parent="HBoxContainer/VBoxContainer/GridContainer/Container2"]
margin_top = 46.0
margin_right = 121.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 2 )
text = "Dev"

[node name="InachoGithub" type="LinkButton" parent="HBoxContainer/VBoxContainer/GridContainer/Container2"]
margin_top = 92.0
margin_right = 121.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 2 )
text = "Github"
underline = 1

[node name="Container3" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/GridContainer"]
margin_left = 304.0
margin_right = 483.0
margin_bottom = 134.0
alignment = 1

[node name="ZeTwitter" type="LinkButton" parent="HBoxContainer/VBoxContainer/GridContainer/Container3"]
margin_right = 179.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 2 )
text = "@ZezaumZZZ"
underline = 1

[node name="Role" type="Label" parent="HBoxContainer/VBoxContainer/GridContainer/Container3"]
margin_top = 46.0
margin_right = 179.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 2 )
text = "Artist"

[node name="ZeBehance" type="LinkButton" parent="HBoxContainer/VBoxContainer/GridContainer/Container3"]
margin_top = 92.0
margin_right = 179.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 2 )
text = "Behance"
underline = 1

[node name="Container4" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/GridContainer"]
margin_left = 503.0
margin_right = 604.0
margin_bottom = 134.0
alignment = 1

[node name="KboozTwitter" type="LinkButton" parent="HBoxContainer/VBoxContainer/GridContainer/Container4"]
margin_right = 101.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 2 )
text = "@kbooz"
underline = 1

[node name="Role" type="Label" parent="HBoxContainer/VBoxContainer/GridContainer/Container4"]
margin_top = 46.0
margin_right = 101.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 2 )
text = "Artist"

[node name="KboozBehance" type="LinkButton" parent="HBoxContainer/VBoxContainer/GridContainer/Container4"]
margin_top = 92.0
margin_right = 101.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 2 )
text = "Site"
underline = 1

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
margin_top = 381.0
margin_right = 604.0
margin_bottom = 385.0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 389.0
margin_right = 604.0
margin_bottom = 417.0
alignment = 1

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 267.0
margin_right = 337.0
margin_bottom = 28.0
theme = ExtResource( 4 )
text = "Go Back"
[connection signal="pressed" from="HBoxContainer/VBoxContainer/GridContainer/Container/DiogohexTwitter" to="." method="_on_DiogohexTwitter_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/GridContainer/Container/DiogohexGithub" to="." method="_on_DiogohexGithub_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/GridContainer/Container2/InachoTwitter" to="." method="_on_InachoTwitter_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/GridContainer/Container2/InachoGithub" to="." method="_on_InachoGithub_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/GridContainer/Container3/ZeTwitter" to="." method="_on_ZeTwitter_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/GridContainer/Container3/ZeBehance" to="." method="_on_ZeBehance_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/GridContainer/Container4/KboozTwitter" to="." method="_on_KboozTwitter_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/GridContainer/Container4/KboozBehance" to="." method="_on_KboozBehance_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
